# dpapi-blob

./: .gitignore  README.md  decrypt.py  pyproject.toml
